--- a/app/src/main/res/layout/confirm_actions.xml
+++ b/app/src/main/res/layout/confirm_actions.xml
@@ -14,7 +14,7 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/rounded_corners"
         android:padding="8dp"
-        android:text="Confirm"
+        android:text="Select"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
